--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "mihna123",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.3"
   }
 }
