--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Repository for the Levi9 5 days in cloud challenge",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "mihna123",
   "license": "GPL-3.0-or-later",
